# applibry-api

./: alembic.ini  main.py  makefile  pyproject.toml
.github/workflows/: dev.yml  prod.yml
src/applibry_api/application/v1/analytics/: controller.py  schema.py  service.py  statistics.py
src/applibry_api/application/v1/apps/: controller.py  schema.py  service.py
src/applibry_api/application/v1/auth/: controller.py  schema.py  service.py
src/applibry_api/application/v1/categories/: controller.py  schema.py  service.py
src/applibry_api/application/v1/integrations/: controller.py
src/applibry_api/application/v1/lookups/: service.py
src/applibry_api/application/v1/permissions/: controller.py  schema.py  service.py
src/applibry_api/application/v1/public/: controller.py
src/applibry_api/application/v1/roles/: controller.py  schema.py  service.py
src/applibry_api/application/v1/tags/: controller.py  (+2 more)
src/applibry_api/domain/entities/: app.py  app_platform.py  app_tag.py  category.py  permission.py  platform.py  review.py  role.py  role_permission.py  root.py  tag.py  user.py  user_app.py  user_category.py
src/applibry_api/domain/enums/: account_type.py  app_status.py  lookup_type.py  modules.py  pricing_model.py
src/applibry_api/domain/exceptions/: base_exception.py
src/applibry_api/domain/schemas/: common_schema.py
src/applibry_api/domain/templates/: registration.html  reset_password.html
src/applibry_api/domain/utilities/: config.py  email_template_manager.py  mapper.py  token_service.py
src/applibry_api/infrastructure/persistence/: database.py
(+22 files in other folders)
